--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,8 +13,6 @@
 @import './components/portfolio-button';
 @import './components/portfolio-cards';
 @import './components/modal';
-@import './components/forms';
 @import './components/footer-forms';
-@import './components/mobile-menu'
-
-
+@import './components/mobile-menu';
+@import './components/modal-FSD';
