--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -27,10 +27,9 @@
 
 /* Базовые стили */
 body {
-  font-family: 'Roboto';
+  font-family: "Montserrat", sans-serif;
   font-size: 14px;
   color: var(--soft-color);
   letter-spacing: 0.03em;
   background-color: var(--light-collor);
-
 }
